Fix tooltip structure.

--- a/packages/ckeditor5-bookmark/lang/contexts.json
+++ b/packages/ckeditor5-bookmark/lang/contexts.json
@@ -10,5 +10,6 @@
 	"bookmark widget": "The label for the bookmark widget.",
 	"Bookmark toolbar": "The label used by assistive technologies describing an bookmark toolbar attached to a bookmark widget.",
 	"Bookmarks": "Title for a feature displaying a list of bookmarks.",
-	"No bookmarks available.": "A message displayed instead of a list of bookmarks if it is empty."
+	"No bookmarks available.": "A message displayed instead of a list of bookmarks if it is empty.",
+	"Scroll to bookmark": "Tooltip shown after hovering the bookmark link preview."
 }
