--- a/packages/ckeditor5-emoji/lang/contexts.json
+++ b/packages/ckeditor5-emoji/lang/contexts.json
@@ -1,6 +1,22 @@
 {
-	"Emoji": "Label of the button that inserts an emoji.",
-	"Show all emojis...": "Button appearing at the end of the list of results of emoji search.",
-	"Skin tone toolbar": "Label used by assistive technologies describing the emoji feature skin tone toolbar.",
-	"Find an emoji (min. 2 characters)": "Label displayed in the emoji feature search field."
+	"Emoji": "Toolbar button tooltip for the Emoji feature.",
+	"Show all emojis...": "Dropdown option label for opening an emoji picker offering more results to choose from.",
+	"Skin tone toolbar": "A label used by assistive technologies describing the emoji feature skin tone dropdown.",
+	"Find an emoji (min. 2 characters)": "Label of an input field for filtering an emoji collection by the typed value.",
+	"No emojis were found matching \"%0\".": "The main text of the message shown to the user when no emoji are available for the search criteria.",
+	"Smileys & Expressions": "Tooltip for filtering the displayed emoji by the \"Smileys & Expressions\" category.",
+	"Gestures & People": "Tooltip for filtering the displayed emoji by the \"Gestures & People\" category.",
+	"Animals & Nature": "Tooltip for filtering the displayed emoji by the \"Animals & Nature\" category.",
+	"Food & Drinks": "Tooltip for filtering the displayed emoji by the \"Food & Drinks\" category.",
+	"Travel & Places": "Tooltip for filtering the displayed emoji by the \"Travel & Places\" category.",
+	"Activities": "Tooltip for filtering the displayed emoji by the \"Activities\" category.",
+	"Objects": "Tooltip for filtering the displayed emoji by the \"Objects\" category.",
+	"Symbols": "Tooltip for filtering the displayed emoji by the \"Symbols\" category.",
+	"Flags": "Tooltip for filtering the displayed emoji by the \"Flags\" category.",
+	"Default skin tone": "Dropdown option label for using the \"Default skin tone\" variant. Example emoji: 👋.",
+	"Light skin tone": "Dropdown option label for using the \"Light skin tone\" variant. Example emoji: 🏻.",
+	"Medium Light skin tone": "Dropdown option label for using the \"Medium Light skin tone\" variant. Example emoji: 🏼.",
+	"Medium skin tone": "Dropdown option label for using the \"Medium skin tone\" variant. Example emoji: 🏽.",
+	"Medium Dark skin tone": "Dropdown option label for using the \"Medium Dark skin tone\" variant. Example emoji: 🏾.",
+	"Dark skin tone": "Dropdown option label for using the \"Dark skin tone\" variant. Example emoji: 🏿."
 }
