--- a/packages/ckeditor5-core/lang/translations/fr.po
+++ b/packages/ckeditor5-core/lang/translations/fr.po
@@ -134,3 +134,7 @@ msgstr "Paragraphe"
 msgctxt "The label used by assistive technologies describing a button that opens a color picker, where user can choose a configured color for a certain properties (eg.: background color, color, border-color etc.)."
 msgid "Color picker"
 msgstr "Pipette à couleurs"
+
+msgctxt "The secondary text of the message shown to the user when no templates are available for the search criteria."
+msgid "Please try a different phrase or check the spelling."
+msgstr "Veuillez essayer une autre phrase ou vérifier l'orthographe."
