--- a/packages/ckeditor5-core/lang/translations/ko.po
+++ b/packages/ckeditor5-core/lang/translations/ko.po
@@ -134,3 +134,7 @@ msgstr "문단"
 msgctxt "The label used by assistive technologies describing a button that opens a color picker, where user can choose a configured color for a certain properties (eg.: background color, color, border-color etc.)."
 msgid "Color picker"
 msgstr "색상 선택기"
+
+msgctxt "The secondary text of the message shown to the user when no templates are available for the search criteria."
+msgid "Please try a different phrase or check the spelling."
+msgstr "다른 문구를 사용해 보시거나 철자를 확인해 주세요."
