--- a/packages/ckeditor5-core/lang/translations/pt-br.po
+++ b/packages/ckeditor5-core/lang/translations/pt-br.po
@@ -134,3 +134,7 @@ msgstr "Parágrafo"
 msgctxt "The label used by assistive technologies describing a button that opens a color picker, where user can choose a configured color for a certain properties (eg.: background color, color, border-color etc.)."
 msgid "Color picker"
 msgstr "Seletor de cor"
+
+msgctxt "The secondary text of the message shown to the user when no templates are available for the search criteria."
+msgid "Please try a different phrase or check the spelling."
+msgstr "Tente uma frase diferente ou verifique a grafia."
