--- a/packages/ckeditor5-core/lang/translations/bg.po
+++ b/packages/ckeditor5-core/lang/translations/bg.po
@@ -135,6 +135,6 @@ msgctxt "The label used by assistive technologies describing a button that opens
 msgid "Color picker"
 msgstr "Избор на цвят"
 
-msgctxt "The secondary text of the message shown to the user when no templates are available for the search criteria."
+msgctxt "The secondary text of the message shown to the user when no results are available for the search criteria."
 msgid "Please try a different phrase or check the spelling."
 msgstr "Моля, опитайте с друг израз или проверете правописа."
