--- a/packages/ckeditor5-core/lang/translations/vi.po
+++ b/packages/ckeditor5-core/lang/translations/vi.po
@@ -135,6 +135,6 @@ msgctxt "The label used by assistive technologies describing a button that opens
 msgid "Color picker"
 msgstr "Bộ chọn màu"
 
-msgctxt "The secondary text of the message shown to the user when no templates are available for the search criteria."
+msgctxt "The secondary text of the message shown to the user when no results are available for the search criteria."
 msgid "Please try a different phrase or check the spelling."
 msgstr "Vui lòng thử một cụm từ khác hoặc kiểm tra lại cụm từ."
