--- a/packages/ckeditor5-core/lang/translations/zh-cn.po
+++ b/packages/ckeditor5-core/lang/translations/zh-cn.po
@@ -135,6 +135,6 @@ msgctxt "The label used by assistive technologies describing a button that opens
 msgid "Color picker"
 msgstr "颜色选择器"
 
-msgctxt "The secondary text of the message shown to the user when no templates are available for the search criteria."
+msgctxt "The secondary text of the message shown to the user when no results are available for the search criteria."
 msgid "Please try a different phrase or check the spelling."
 msgstr "请尝试使用不同的短语或检查拼写。"
