--- a/packages/ckeditor5-emoji/lang/translations/en.po
+++ b/packages/ckeditor5-emoji/lang/translations/en.po
@@ -11,22 +11,82 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 
-msgctxt "Label of the button that inserts an emoji."
+msgctxt "Toolbar button tooltip for the Emoji feature."
 msgid "Emoji"
 msgstr "Emoji"
 
-msgctxt "Button appearing at the end of the list of results of emoji search."
-msgid "Show all emoji..."
-msgstr "Show all emoji..."
+msgctxt "Dropdown option label for opening an emoji picker offering more results to choose from."
+msgid "Show all emojis..."
+msgstr "Show all emojis..."
 
-msgctxt "Label used by assistive technologies describing the emoji feature skin tone toolbar."
+msgctxt "A label used by assistive technologies describing the emoji feature skin tone dropdown."
 msgid "Skin tone toolbar"
 msgstr "Skin tone toolbar"
 
-msgctxt "Label displayed in the emoji feature search field."
+msgctxt "Label of an input field for filtering an emoji collection by the typed value."
 msgid "Find an emoji (min. 2 characters)"
 msgstr "Find an emoji (min. 2 characters)"
 
-msgctxt "Label displayed in the emoji grid when no emoji matches the search query."
-msgid "Nothing found"
-msgstr "Nothing found"
+msgctxt "The main text of the message shown to the user when no emoji are available for the search criteria."
+msgid "No emojis were found matching \"%0\"."
+msgstr "No emojis were found matching \"%0\"."
+
+msgctxt "Tooltip for filtering the displayed emoji by the \"Smileys & Expressions\" category."
+msgid "Smileys & Expressions"
+msgstr "Smileys & Expressions"
+
+msgctxt "Tooltip for filtering the displayed emoji by the \"Gestures & People\" category."
+msgid "Gestures & People"
+msgstr "Gestures & People"
+
+msgctxt "Tooltip for filtering the displayed emoji by the \"Animals & Nature\" category."
+msgid "Animals & Nature"
+msgstr "Animals & Nature"
+
+msgctxt "Tooltip for filtering the displayed emoji by the \"Food & Drinks\" category."
+msgid "Food & Drinks"
+msgstr "Food & Drinks"
+
+msgctxt "Tooltip for filtering the displayed emoji by the \"Travel & Places\" category."
+msgid "Travel & Places"
+msgstr "Travel & Places"
+
+msgctxt "Tooltip for filtering the displayed emoji by the \"Activities\" category."
+msgid "Activities"
+msgstr "Activities"
+
+msgctxt "Tooltip for filtering the displayed emoji by the \"Objects\" category."
+msgid "Objects"
+msgstr "Objects"
+
+msgctxt "Tooltip for filtering the displayed emoji by the \"Symbols\" category."
+msgid "Symbols"
+msgstr "Symbols"
+
+msgctxt "Tooltip for filtering the displayed emoji by the \"Flags\" category."
+msgid "Flags"
+msgstr "Flags"
+
+msgctxt "Dropdown option label for using the \"Default skin tone\" variant. Example emoji: 👋."
+msgid "Default skin tone"
+msgstr "Default skin tone"
+
+msgctxt "Dropdown option label for using the \"Light skin tone\" variant. Example emoji: 🏻."
+msgid "Light skin tone"
+msgstr "Light skin tone"
+
+msgctxt "Dropdown option label for using the \"Medium Light skin tone\" variant. Example emoji: 🏼."
+msgid "Medium Light skin tone"
+msgstr "Medium Light skin tone"
+
+msgctxt "Dropdown option label for using the \"Medium skin tone\" variant. Example emoji: 🏽."
+msgid "Medium skin tone"
+msgstr "Medium skin tone"
+
+msgctxt "Dropdown option label for using the \"Medium Dark skin tone\" variant. Example emoji: 🏾."
+msgid "Medium Dark skin tone"
+msgstr "Medium Dark skin tone"
+
+msgctxt "Dropdown option label for using the \"Dark skin tone\" variant. Example emoji: 🏿."
+msgid "Dark skin tone"
+msgstr "Dark skin tone"
