--- a/packages/ckeditor5-emoji/lang/contexts.json
+++ b/packages/ckeditor5-emoji/lang/contexts.json
@@ -1,9 +1,9 @@
 {
 	"Emoji": "Toolbar button tooltip for the Emoji feature.",
-	"Show all emojis...": "Dropdown option label for opening an emoji picker offering more results to choose from.",
+	"Show all emoji...": "Dropdown option label for opening an emoji picker offering more results to choose from.",
 	"Find an emoji (min. 2 characters)": "Label of an input field for filtering an emoji collection by the typed value.",
 	"No emojis were found matching \"%0\".": "The main text of the message shown to the user when no emoji are available for the search criteria.",
-	"Keep on typing to see the results.": "The main text of the message shown to the user when the provided search query does not contain the required number of characters.",
+	"Keep on typing to see the emoji.": "The main text of the message shown to the user when the provided search query does not contain the required number of characters.",
 	"The query must contain at least two characters.": "The secondary text of the message shown to the user to explain how many characters the search query must consist of.",
 	"Smileys & Expressions": "Tooltip for filtering the displayed emoji by the \"Smileys & Expressions\" category.",
 	"Gestures & People": "Tooltip for filtering the displayed emoji by the \"Gestures & People\" category.",
