Internal: Translations. [skip ci]

--- a/packages/ckeditor5-core/lang/translations/ar.po
+++ b/packages/ckeditor5-core/lang/translations/ar.po
@@ -141,4 +141,4 @@ msgstr "يُرجى محاولة البحث باستخدام عبارة أخرى 
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "المصدر"
