--- a/packages/ckeditor5-core/lang/translations/cs.po
+++ b/packages/ckeditor5-core/lang/translations/cs.po
@@ -141,4 +141,4 @@ msgstr "Zkuste jinou frázi nebo zkontrolujte, zda jste neudělali chybu."
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "Zdroj"
