--- a/packages/ckeditor5-core/lang/translations/pt-br.po
+++ b/packages/ckeditor5-core/lang/translations/pt-br.po
@@ -141,4 +141,4 @@ msgstr "Tente uma frase diferente ou verifique a grafia."
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "Fonte"
