--- a/packages/ckeditor5-core/lang/translations/sk.po
+++ b/packages/ckeditor5-core/lang/translations/sk.po
@@ -141,4 +141,4 @@ msgstr "Skúste inú frázu alebo skontrolujte pravopis."
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "Zdroj"
