--- a/packages/ckeditor5-core/lang/translations/da.po
+++ b/packages/ckeditor5-core/lang/translations/da.po
@@ -141,4 +141,4 @@ msgstr "Prøv en anden søgning eller tjek stavemåden."
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "Kilde"
