--- a/packages/ckeditor5-core/lang/translations/el.po
+++ b/packages/ckeditor5-core/lang/translations/el.po
@@ -141,4 +141,4 @@ msgstr "Παρακαλούμε δοκιμάστε μια διαφορετική 
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "Πηγή"
