--- a/packages/ckeditor5-core/lang/translations/et.po
+++ b/packages/ckeditor5-core/lang/translations/et.po
@@ -141,4 +141,4 @@ msgstr "Proovige mõnda muud fraasi või kontrollige õigekirja."
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "Allikas"
