--- a/packages/ckeditor5-core/lang/translations/fi.po
+++ b/packages/ckeditor5-core/lang/translations/fi.po
@@ -141,4 +141,4 @@ msgstr "Kokeilethan toista lausetta tai tarkista oikeinkirjoitus."
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "Lähde"
