--- a/packages/ckeditor5-core/lang/translations/fr.po
+++ b/packages/ckeditor5-core/lang/translations/fr.po
@@ -141,4 +141,4 @@ msgstr "Veuillez essayer une autre phrase ou vérifier l'orthographe."
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "Source"
