--- a/packages/ckeditor5-core/lang/translations/he.po
+++ b/packages/ckeditor5-core/lang/translations/he.po
@@ -141,4 +141,4 @@ msgstr "אנא נסו צירוף מילים שונה או בדקו את האיו
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "מקור"
