--- a/packages/ckeditor5-core/lang/translations/hu.po
+++ b/packages/ckeditor5-core/lang/translations/hu.po
@@ -141,4 +141,4 @@ msgstr "Kérjük, próbálkozzon másik kifejezéssel, vagy ellenőrizze a helye
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "Forrás"
