--- a/packages/ckeditor5-core/lang/translations/id.po
+++ b/packages/ckeditor5-core/lang/translations/id.po
@@ -141,4 +141,4 @@ msgstr "Silakan coba frasa lain atau periksa ejaannya."
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "Sumber"
