--- a/packages/ckeditor5-core/lang/translations/it.po
+++ b/packages/ckeditor5-core/lang/translations/it.po
@@ -141,4 +141,4 @@ msgstr "Prova una frase diversa o controlla l'ortografia."
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "Fonte"
