--- a/packages/ckeditor5-core/lang/translations/ko.po
+++ b/packages/ckeditor5-core/lang/translations/ko.po
@@ -141,4 +141,4 @@ msgstr "다른 문구를 사용해 보시거나 철자를 확인해 주세요."
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "소스"
