--- a/packages/ckeditor5-core/lang/translations/lt.po
+++ b/packages/ckeditor5-core/lang/translations/lt.po
@@ -141,4 +141,4 @@ msgstr "Išbandykite kitą frazę arba patikrinkite rašybą."
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "Šaltinis"
