--- a/packages/ckeditor5-core/lang/translations/lv.po
+++ b/packages/ckeditor5-core/lang/translations/lv.po
@@ -141,4 +141,4 @@ msgstr "Lūdzu, izmēģiniet citu frāzi vai pārbaudiet pareizrakstību."
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "Avots"
