--- a/packages/ckeditor5-core/lang/translations/ms.po
+++ b/packages/ckeditor5-core/lang/translations/ms.po
@@ -141,4 +141,4 @@ msgstr "Sila cuba frasa berbeza atau semak ejaan."
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "Sumber"
