--- a/packages/ckeditor5-core/lang/translations/nl.po
+++ b/packages/ckeditor5-core/lang/translations/nl.po
@@ -141,4 +141,4 @@ msgstr "Probeer een andere term of controleer de spelling."
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "Bron"
