--- a/packages/ckeditor5-core/lang/translations/pl.po
+++ b/packages/ckeditor5-core/lang/translations/pl.po
@@ -141,4 +141,4 @@ msgstr "Spróbuj wyszukać inną frazą lub sprawdź poprawność ortograficzną
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "Źródło"
