--- a/packages/ckeditor5-core/lang/translations/pt.po
+++ b/packages/ckeditor5-core/lang/translations/pt.po
@@ -141,4 +141,4 @@ msgstr "Tente uma expressão diferente ou verifique a ortografia."
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "Fonte"
