--- a/packages/ckeditor5-core/lang/translations/ro.po
+++ b/packages/ckeditor5-core/lang/translations/ro.po
@@ -141,4 +141,4 @@ msgstr "Vă rugăm să încercați o altă expresie sau verificați ortografia."
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "Sursă"
