--- a/packages/ckeditor5-core/lang/translations/sr.po
+++ b/packages/ckeditor5-core/lang/translations/sr.po
@@ -141,4 +141,4 @@ msgstr "Pokušajte sa drugom frazom ili proverite pravopis."
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "Izvor"
