--- a/packages/ckeditor5-core/lang/translations/sv.po
+++ b/packages/ckeditor5-core/lang/translations/sv.po
@@ -141,4 +141,4 @@ msgstr "Prova en annan fras eller kontrollera stavningen."
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "Källa"
