--- a/packages/ckeditor5-core/lang/translations/tr.po
+++ b/packages/ckeditor5-core/lang/translations/tr.po
@@ -141,4 +141,4 @@ msgstr "Lütfen farklı bir kelime grubu deneyin veya yazım denetimi yapın."
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "Kaynak"
