--- a/packages/ckeditor5-core/lang/translations/zh-cn.po
+++ b/packages/ckeditor5-core/lang/translations/zh-cn.po
@@ -141,4 +141,4 @@ msgstr "请尝试使用不同的短语或检查拼写。"
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "源"
