--- a/packages/ckeditor5-core/lang/translations/zh.po
+++ b/packages/ckeditor5-core/lang/translations/zh.po
@@ -141,4 +141,4 @@ msgstr "請嘗試其他詞彙或確認拼寫是否正確。"
 
 msgctxt "The label of the source editing related features used in toolbar buttons."
 msgid "Source"
-msgstr ""
+msgstr "原始碼"
