--- a/packages/ckeditor5-emoji/lang/translations/id.po
+++ b/packages/ckeditor5-emoji/lang/translations/id.po
@@ -13,88 +13,88 @@ msgstr ""
 
 msgctxt "Toolbar button tooltip for the Emoji feature."
 msgid "Emoji"
-msgstr ""
+msgstr "Emoji"
 
 msgctxt "Dropdown option label for opening an emoji picker offering more results to choose from."
 msgid "Show all emoji..."
-msgstr ""
+msgstr "Tampilkan semua emoji…"
 
 msgctxt "Label of an input field for filtering an emoji collection by the typed value."
 msgid "Find an emoji (min. 2 characters)"
-msgstr ""
+msgstr "Temukan emoji (min. 2 karakter)"
 
 msgctxt "The main text of the message shown to the user when no emoji are available for the search criteria."
 msgid "No emojis were found matching \"%0\"."
-msgstr ""
+msgstr "Tidak ditemukan emoji yang cocok dengan \"%0\"."
 
 msgctxt "The main text of the message shown to the user when the provided search query does not contain the required number of characters."
 msgid "Keep on typing to see the emoji."
-msgstr ""
+msgstr "Teruskan mengetik untuk melihat emoji."
 
 msgctxt "The secondary text of the message shown to the user to explain how many characters the search query must consist of."
 msgid "The query must contain at least two characters."
-msgstr ""
+msgstr "Kueri harus berisi setidaknya dua karakter."
 
 msgctxt "Tooltip for filtering the displayed emoji by the \"Smileys & Expressions\" category."
 msgid "Smileys & Expressions"
-msgstr ""
+msgstr "Smiley & Ekspresi"
 
 msgctxt "Tooltip for filtering the displayed emoji by the \"Gestures & People\" category."
 msgid "Gestures & People"
-msgstr ""
+msgstr "Gerakan & Orang"
 
 msgctxt "Tooltip for filtering the displayed emoji by the \"Animals & Nature\" category."
 msgid "Animals & Nature"
-msgstr ""
+msgstr "Hewan & Alam"
 
 msgctxt "Tooltip for filtering the displayed emoji by the \"Food & Drinks\" category."
 msgid "Food & Drinks"
-msgstr ""
+msgstr "Makanan & Minuman"
 
 msgctxt "Tooltip for filtering the displayed emoji by the \"Travel & Places\" category."
 msgid "Travel & Places"
-msgstr ""
+msgstr "Perjalanan & Tempat"
 
 msgctxt "Tooltip for filtering the displayed emoji by the \"Activities\" category."
 msgid "Activities"
-msgstr ""
+msgstr "Aktifitas"
 
 msgctxt "Tooltip for filtering the displayed emoji by the \"Objects\" category."
 msgid "Objects"
-msgstr ""
+msgstr "Objek"
 
 msgctxt "Tooltip for filtering the displayed emoji by the \"Symbols\" category."
 msgid "Symbols"
-msgstr ""
+msgstr "Simbol"
 
 msgctxt "Tooltip for filtering the displayed emoji by the \"Flags\" category."
 msgid "Flags"
-msgstr ""
+msgstr "Bendera"
 
 msgctxt "Default label for the emoji skin tone dropdown."
 msgid "Select skin tone"
-msgstr ""
+msgstr "Pilih warna kulit"
 
 msgctxt "Dropdown option label for using the \"Default skin tone\" variant. Example emoji: 👋."
 msgid "Default skin tone"
-msgstr ""
+msgstr "Warna kulit standar"
 
 msgctxt "Dropdown option label for using the \"Light skin tone\" variant. Example emoji: 👋🏻."
 msgid "Light skin tone"
-msgstr ""
+msgstr "Warna kulit cerah"
 
 msgctxt "Dropdown option label for using the \"Medium Light skin tone\" variant. Example emoji: 👋🏼."
 msgid "Medium Light skin tone"
-msgstr ""
+msgstr "Warna kulit cerah sedang"
 
 msgctxt "Dropdown option label for using the \"Medium skin tone\" variant. Example emoji: 👋🏽."
 msgid "Medium skin tone"
-msgstr ""
+msgstr "Warna kulit sedang"
 
 msgctxt "Dropdown option label for using the \"Medium Dark skin tone\" variant. Example emoji: 👋🏾."
 msgid "Medium Dark skin tone"
-msgstr ""
+msgstr "Warna kulit gelap sedang"
 
 msgctxt "Dropdown option label for using the \"Dark skin tone\" variant. Example emoji: 👋🏿."
 msgid "Dark skin tone"
-msgstr ""
+msgstr "Warna kulit gelap"
