--- a/packages/ckeditor5-emoji/lang/translations/pt-br.po
+++ b/packages/ckeditor5-emoji/lang/translations/pt-br.po
@@ -13,88 +13,88 @@ msgstr ""
 
 msgctxt "Toolbar button tooltip for the Emoji feature."
 msgid "Emoji"
-msgstr ""
+msgstr "Emoji"
 
 msgctxt "Dropdown option label for opening an emoji picker offering more results to choose from."
 msgid "Show all emoji..."
-msgstr ""
+msgstr "Exibir todos os emojis..."
 
 msgctxt "Label of an input field for filtering an emoji collection by the typed value."
 msgid "Find an emoji (min. 2 characters)"
-msgstr ""
+msgstr "Encontre um emoji (mín. de 2 caracteres)"
 
 msgctxt "The main text of the message shown to the user when no emoji are available for the search criteria."
 msgid "No emojis were found matching \"%0\"."
-msgstr ""
+msgstr "Não foram encontrados emojis correspondentes a \"%0\"."
 
 msgctxt "The main text of the message shown to the user when the provided search query does not contain the required number of characters."
 msgid "Keep on typing to see the emoji."
-msgstr ""
+msgstr "Continue digitando para ver o emoji."
 
 msgctxt "The secondary text of the message shown to the user to explain how many characters the search query must consist of."
 msgid "The query must contain at least two characters."
-msgstr ""
+msgstr "A consulta deve conter ao menos dois caracteres."
 
 msgctxt "Tooltip for filtering the displayed emoji by the \"Smileys & Expressions\" category."
 msgid "Smileys & Expressions"
-msgstr ""
+msgstr "Rostos e Expressões"
 
 msgctxt "Tooltip for filtering the displayed emoji by the \"Gestures & People\" category."
 msgid "Gestures & People"
-msgstr ""
+msgstr "Gestos e Pessoas"
 
 msgctxt "Tooltip for filtering the displayed emoji by the \"Animals & Nature\" category."
 msgid "Animals & Nature"
-msgstr ""
+msgstr "Animais e Natureza"
 
 msgctxt "Tooltip for filtering the displayed emoji by the \"Food & Drinks\" category."
 msgid "Food & Drinks"
-msgstr ""
+msgstr "Comidas e Bebidas"
 
 msgctxt "Tooltip for filtering the displayed emoji by the \"Travel & Places\" category."
 msgid "Travel & Places"
-msgstr ""
+msgstr "Viagem e Lugares"
 
 msgctxt "Tooltip for filtering the displayed emoji by the \"Activities\" category."
 msgid "Activities"
-msgstr ""
+msgstr "Atividades"
 
 msgctxt "Tooltip for filtering the displayed emoji by the \"Objects\" category."
 msgid "Objects"
-msgstr ""
+msgstr "Objetos"
 
 msgctxt "Tooltip for filtering the displayed emoji by the \"Symbols\" category."
 msgid "Symbols"
-msgstr ""
+msgstr "Símbolos"
 
 msgctxt "Tooltip for filtering the displayed emoji by the \"Flags\" category."
 msgid "Flags"
-msgstr ""
+msgstr "Bandeiras"
 
 msgctxt "Default label for the emoji skin tone dropdown."
 msgid "Select skin tone"
-msgstr ""
+msgstr "Selecione o tom de pele"
 
 msgctxt "Dropdown option label for using the \"Default skin tone\" variant. Example emoji: 👋."
 msgid "Default skin tone"
-msgstr ""
+msgstr "Tom de pele padrão"
 
 msgctxt "Dropdown option label for using the \"Light skin tone\" variant. Example emoji: 👋🏻."
 msgid "Light skin tone"
-msgstr ""
+msgstr "Tom de pele claro"
 
 msgctxt "Dropdown option label for using the \"Medium Light skin tone\" variant. Example emoji: 👋🏼."
 msgid "Medium Light skin tone"
-msgstr ""
+msgstr "Tom de pele médio-claro"
 
 msgctxt "Dropdown option label for using the \"Medium skin tone\" variant. Example emoji: 👋🏽."
 msgid "Medium skin tone"
-msgstr ""
+msgstr "Tom de pele médio"
 
 msgctxt "Dropdown option label for using the \"Medium Dark skin tone\" variant. Example emoji: 👋🏾."
 msgid "Medium Dark skin tone"
-msgstr ""
+msgstr "Tom de pele médio-escuro"
 
 msgctxt "Dropdown option label for using the \"Dark skin tone\" variant. Example emoji: 👋🏿."
 msgid "Dark skin tone"
-msgstr ""
+msgstr "Tom de pele escuro"
