Add keystroke for fullscreen mode.

--- a/packages/ckeditor5-core/lang/contexts.json
+++ b/packages/ckeditor5-core/lang/contexts.json
@@ -34,5 +34,6 @@
 	"Insert": "Label for the Insert button.",
 	"Update": "Label for the Update button.",
 	"Back": "Label for the Back button.",
-	"Please try a different phrase or check the spelling.": "The secondary text of the message shown to the user when no results are available for the search criteria."
+	"Please try a different phrase or check the spelling.": "The secondary text of the message shown to the user when no results are available for the search criteria.",
+	"Fullscreen mode": "Command that toggles fullscreen mode"
 }
