Apply minor CR fixes.

--- a/packages/ckeditor5-table/lang/contexts.json
+++ b/packages/ckeditor5-table/lang/contexts.json
@@ -66,5 +66,6 @@
 	"Table": "The accessible label of the menu bar button that displays a user interface to insert a table into editor content.",
 	"Table layout": "The accessible label of the menu bar or dropdown button that displays a user interface to insert a table layout into editor content.",
 	"Table content": "The accessible label of the menu bar or dropdown button that displays a user interface to insert table content into editor.",
-	"Choose table type": "The accessible label of the table ballon button that displays a user interface to choose table type."
+	"Choose table type": "The accessible label of the table ballon button that displays a user interface to choose table type.",
+	"Table type options": "The accessible label of dropdown list that displays a user interface to choose table type."
 }
