Other: Updated translations. [skip ci]

--- a/packages/ckeditor5-fullscreen/lang/translations/bn.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/bn.po
@@ -26,3 +26,11 @@ msgstr "ফুলস্ক্রিন মোড"
 msgctxt "Keystroke description for assistive technologies: keystroke for toggling a fullscreen mode."
 msgid "Toggle fullscreen mode"
 msgstr "ফুলস্ক্রিন মোড টগল করুন"
+
+msgctxt "Label for a sidebar header that contains a document outline"
+msgid "Document outline"
+msgstr ""
+
+msgctxt "Label for a sidebar header that contains a list of connected users"
+msgid "Connected users"
+msgstr ""
