--- a/packages/ckeditor5-fullscreen/lang/translations/en-gb.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/en-gb.po
@@ -26,3 +26,11 @@ msgstr "Fullscreen mode"
 msgctxt "Keystroke description for assistive technologies: keystroke for toggling a fullscreen mode."
 msgid "Toggle fullscreen mode"
 msgstr "Toggle fullscreen mode"
+
+msgctxt "Label for a sidebar header that contains a document outline"
+msgid "Document outline"
+msgstr "Document outline"
+
+msgctxt "Label for a sidebar header that contains a list of connected users"
+msgid "Connected users"
+msgstr "Connected users"
