--- a/packages/ckeditor5-fullscreen/lang/translations/hi.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/hi.po
@@ -26,3 +26,11 @@ msgstr "फ़ुलस्क्रीन मोड"
 msgctxt "Keystroke description for assistive technologies: keystroke for toggling a fullscreen mode."
 msgid "Toggle fullscreen mode"
 msgstr "फ़ुलस्क्रीन मोड स्विच करें"
+
+msgctxt "Label for a sidebar header that contains a document outline"
+msgid "Document outline"
+msgstr ""
+
+msgctxt "Label for a sidebar header that contains a list of connected users"
+msgid "Connected users"
+msgstr ""
