--- a/packages/ckeditor5-fullscreen/lang/translations/th.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/th.po
@@ -26,3 +26,11 @@ msgstr "โหมดเต็มหน้าจอ"
 msgctxt "Keystroke description for assistive technologies: keystroke for toggling a fullscreen mode."
 msgid "Toggle fullscreen mode"
 msgstr "สลับโหมดเต็มหน้าจอ"
+
+msgctxt "Label for a sidebar header that contains a document outline"
+msgid "Document outline"
+msgstr ""
+
+msgctxt "Label for a sidebar header that contains a list of connected users"
+msgid "Connected users"
+msgstr ""
