--- a/packages/ckeditor5-fullscreen/lang/translations/zh.po
+++ b/packages/ckeditor5-fullscreen/lang/translations/zh.po
@@ -26,3 +26,11 @@ msgstr "全螢幕模式"
 msgctxt "Keystroke description for assistive technologies: keystroke for toggling a fullscreen mode."
 msgid "Toggle fullscreen mode"
 msgstr "切換全螢幕模式"
+
+msgctxt "Label for a sidebar header that contains a document outline"
+msgid "Document outline"
+msgstr ""
+
+msgctxt "Label for a sidebar header that contains a list of connected users"
+msgid "Connected users"
+msgstr ""
